# Multiscribe-Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.en.md  README.md  README_zh.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  docker-compose.yml  pyproject.toml
codex/: EXEC_PROMPT.md  REVIEW_TEMPLATE.md
codex/reviews/: ARCHITECTURE_EVALUATION_REPORT.md  P0-REVIEW.md  P0.5-REVIEW.md  P0.6-REVIEW.md  P0.7-REVIEW.md  P1-REVIEW.md  P10-REVIEW.md  P11-REVIEW.md  P12-REVIEW.md  P13-REVIEW.md  P16.1-REVIEW.md  P17-REVIEW.md  P18-REVIEW.md  P19-REVIEW.md  P2-REVIEW.md  P21-REVIEW.md  P22-REVIEW.md  P23-REVIEW.md  P24-REVIEW.md  P25.1-REVIEW.md  P26-REVIEW.md  P27-REVIEW.md  P28-REVIEW.md  P3-REVIEW.md  P30-REVIEW.md  P30.1-REPAIR-REPORT.md  P30.1-REVIEW.md  P4-REVIEW.md  P5-REVIEW.md  P6-REVIEW.md  P7-REVIEW.md  P8-REVIEW.md  P9-REVIEW.md
docs/: ARCHITECTURE.md  MVP.md  PRD.md
docs/conventions/: coding-standards.md  plugin-contract.md
docs/improvement/: AGENT_CONTEXT_OPTIMIZATION_BACKLOG.md
docs/phases/: P0-工程基线.md  P0.5-MVP默认配置绑定.md  P0.6-API代理转发支持.md  P0.7-API中转端点支持.md  P1-配置与领域模型.md  P10-DAG工作流引擎.md  P11-每日推送流水线.md  P12-API与可观测.md  P13-MVP收尾.md  P14-后置大纲.md  P2-DB与仓储.md  P21-评估框架.md  P22-Interop.md  P23-OTel.md  P24-Loop深化.md  P25-架构债清理总览.md  P25.1-P0生产就绪门禁.md  P26-Harness与工作流稳定性.md  P27-安全加固与可观测性补全.md  P28-数据层与插件生态.md  P29-P2P3长期优化大纲.md  P3-LLM-Provider.md  P30-上下文窗口生产链路修复.md  P30.1-digest-curate投影精简加固.md  P4-Agent-Harness.md  P5-插件骨架.md  P6-RSS适配器.md  P7-飞书机器人.md  P8-企业微信机器人.md  P9-调度器.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: Multiscribe-Agent-Start.bat  run_digest.py
src/multiscribe_agent/: __init__.py  __main__.py  app.py  bootstrap.py  cli.py  config.py
tests/: __init__.py  test_base_url_binding.py  test_bootstrap_agent_terminal.py  test_bootstrap_agent_update.py  test_config.py  test_config_db.py  test_config_env_binding.py  test_context_window_config.py  test_custom_model_names.py  test_proxy_routing.py  test_publish_history.py  test_smoke.py
tests/agents/: conftest.py  test_context.py  test_context_optimization.py  test_context_overflow_protection.py  test_context_trust_boundary.py  test_context_window_closure.py  test_executor.py  test_executor_deadlock_detection.py  test_loop_exit_conditions.py  test_loop_node_multi_round.py  test_planner_reflector.py  test_reflector.py  test_token_counter_accuracy.py
tests/api/: conftest.py  test_agents_workflows.py  test_api_rate_limit.py  test_auth.py  test_csrf_protection.py  test_dashboard.py  test_digest.py  test_frontend_static.py  test_schedules.py
tests/core/: test_event_bus.py  test_logging.py
tests/domain/: test_models.py
tests/e2e/: test_daily_digest_e2e.py
tests/eval/: test_benchmark.py  test_dataset.py  test_evaluator.py  test_feedback_loop.py
tests/fixtures/: hackernews.xml  sample_feed.xml
tests/infra/: conftest.py  test_connection_pool.py  test_db.py  test_fts_chinese.py  test_repositories.py  test_slow_query_logging.py
tests/interop/: __init__.py  test_api_v1_execute.py  test_api_v1_register.py  test_api_v1_tools.py  test_rate_limit.py  test_service_interop.py
tests/knowledge/: __init__.py  conftest.py  test_api_kb.py  test_chunking.py  test_document_processor.py  test_embedding_service.py  test_kb_service.py  test_retriever.py  test_vector_store.py
tests/llm/: conftest.py  test_provider.py  test_providers_unit.py
tests/mcp/: __init__.py  test_auth.py  test_registry.py  test_server_api.py  test_tools.py  test_types.py
tests/memory/: __init__.py  conftest.py  test_api_memory.py  (+4 more)
(+236 files in other folders)
