[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiscribe-agent"
version = "0.1.0"
description = "A declarative multi-agent workflow platform for automated content curation and publishing."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
dependencies = [
    "apscheduler>=3.10,<4",
    "aiosqlite>=0.20",
    "click>=8.1",
    "defusedxml>=0.7.1",
    "feedparser>=6.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "langchain>=0.3,<1",
    "langchain-anthropic>=0.2,<1",
    "langchain-openai>=0.2,<1",
    "jinja2>=3.1",
    "markdown>=3.7",
    "mcp>=1,<2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-jose[cryptography]>=3.3",
    "passlib>=1.7",
    "sse-starlette>=2.1",
    "sentence-transformers>=3.0",
    "selectolax>=0.3.0",
    "structlog>=24.1",
    "sqlite-vec>=0.1",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "respx>=0.21",
    "ruff>=0.5",
    "types-click",
]
observability = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "prometheus-client>=0.20",
]
text = [
    "jieba>=0.42",
]

[project.scripts]
multiscribe-agent = "multiscribe_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multiscribe_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "ANN", "S", "PT", "RUF"]
per-file-ignores = { "tests/**/*.py" = ["ANN", "S"] }

[tool.ruff.format]

[tool.mypy]
strict = true
packages = ["multiscribe_agent"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["anthropic.*", "langchain.*", "langchain_anthropic.*", "langchain_openai.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: real external dependency tests (skipped by default)",
    "benchmark: performance benchmark test (requires pytest-benchmark)",
]
addopts = "-m 'not e2e'"

[dependency-groups]
dev = [
    "types-defusedxml>=0.7.0.20260504",
]
